# NEURECTOMY

./: .dockerignore  .env.example  .gitignore  .npmrc  .trivyignore  00-README-PHASE-18.md  BUILD_DESKTOP_APP.ps1  DAY-1-COMPLETE.md  DEPLOYMENT.md  DESKTOP_APP_BUILD_GUIDE.md  Dockerfile  LAUNCH-NEURECTOMY.bat  LAUNCH-NEURECTOMY.ps1  NEURECTOMY IDE Construction - Comprehensive Implementation Guide.md  NEURECTOMY_PORT_MIGRATION_COMPLETE.md  Neurectomy-Agent-Outline.txt  Neurectomy-Starter.txt  Neurectomy_Phase_2.txt  Neurectomy_Phase_3.txt  Neurectomy_Phase_4.md  Neurectomy_Phase_5.md  PHASE-18-COMPLETE-STATUS.md  PHASE-18-EXECUTION-SUMMARY.md  PHASE-18-QUICK-START.md  PHASE-18A-1-PROMETHEUS-SETUP.md  PHASE-18A-2-NEURECTOMY-METRICS.md  PHASE-18A-METRICS-TESTING-COMPLETION.md  PHASE-18A-QUICK-START.md  PHASE-18B-COMPLETION-REPORT.md  PHASE-18B-DEPLOYMENT-QUICKSTART.md  PHASE-18B-ENVIRONMENT-VARIABLES-SETUP.md  PHASE-18B-TESTING-VALIDATION-GUIDE.md  PHASE-18D-ADAPTIVE-SAMPLING.md  PHASE-18D-DEPLOYMENT-TESTING.md  PHASE-18D-GRAFANA-TRACE-INTEGRATION.md  PHASE-18D-OPENTELEMETRY-TRACING.md  PHASE-18E-LOKI-ARCHITECTURE.md  PHASE-18E-LOKI-COMPLETE-DELIVERABLES.md  PHASE-18E-LOKI-INDEX.md  PHASE-18E-LOKI-INTEGRATION.md  (+41 more)
.github/: copilot-instructions.md
.history/: README_20251203160316.md  README_20251203160601.md
apps/spectrum-workspace/src-tauri/: Cargo.toml  tauri.conf.json
apps/spectrum-workspace/src-tauri/capabilities/: default.json
apps/spectrum-workspace/src-tauri/icons/: icon.icns
apps/spectrum-workspace/src-tauri/src/: commands.rs  gpu.rs  lib.rs  main.rs  state.rs
apps/spectrum-workspace/src-tauri/src/services/: api_gateway.rs  database.rs  ml_service.rs  mod.rs
benchmarks/: __init__.py  agent_bench.py  base.py  compression_bench.py  e2e_bench.py  inference_bench.py  init_profiling_18f.py  metrics_performance_bench.py  phase_18f_profiling_configs.py  phase_18f_profiling_utils.py  profiling_config.py  results.py  runner.py  runner_18f.py  storage_bench.py
chaos/: __init__.py  runner.py
deploy/: KUBERNETES-DEPLOYMENT-GUIDE.md
docs/: DESKTOP_APP_GUIDE.md  EMBEDDED_BACKEND_SUMMARY.md  EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md  GRAFANA-DASHBOARD-SPECIFICATIONS.md  IMPLEMENTATION_STATUS_REPORT.md  INTELLIGENCE_FOUNDRY_BACKEND_COMPLETION_REPORT.md  MASTER_PORT_ASSIGNMENTS.md  PHASE_0_FINAL_VERIFICATION_REPORT.md  PHASE_0_INTERFACE_CONTRACTS_REPORT.md  PHASE_0_MOCK_IMPLEMENTATIONS_REPORT.md  PHASE_0_USAGE_EXAMPLES.py  PHASE_0_VERIFICATION_REPORT.md  PHASE_10_COMPLETION_REPORT.md  PHASE_11_COMPLETION_REPORT.md  PHASE_12_COMPLETION_REPORT.md  PHASE_13_COMPLETION_REPORT.md  PHASE_4A_COMPLETION_REPORT.md  PHASE_4B_COMPLETION_REPORT.md  PHASE_5A_COMPLETION_REPORT.md  PORT_ASSIGNMENTS.md  PROMETHEUS-GRAFANA-DEPLOYMENT-GUIDE.md  README.md  SVAULT-METRICS-DESIGN.md  SVAULT-METRICS-IMPLEMENTATION.md  TECHNICAL_ENHANCEMENTS.md  architecture.md  getting-started.md  index.md
examples/: sdk_usage.py
infrastructure/: README.md  requirements.txt
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: basic_usage.rs
sdks/rust/src/: lib.rs
sdks/rust/tests/: integration_tests.rs
services/ml-service/: Dockerfile  Dockerfile.gpu  GPU_SETUP.md  README.md  TESTING_STATUS.md  config.py  intelligence_foundry_main.py  main.py  mlflow_server.py  optuna_service.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  training_engine.py
services/ml-service/docs/: TASK_5_COMPLETION_REPORT.md
services/ml-service/scripts/: gpu_env.ps1
services/ml-service/src/: __init__.py  config.py
services/ml-service/src/api/: __init__.py  agents.py  analytics.py  auth.py  embeddings.py  exceptions.py  health.py  interfaces.py  llm.py  mlflow_router.py  openapi_config.py  routes.py  training.py  types.py
services/ml-service/src/db/: __init__.py  postgres.py  redis.py  vector.py
services/ml-service/src/monitoring/: __init__.py  metrics.py  tracing.py
services/ml-service/src/pipelines/rag/: __init__.py  document_processor.py
services/ml-service/src/security/: __init__.py
services/ml-service/src/services/: __init__.py  agent_intelligence.py  analytics.py  embeddings.py  inference_optimizer.py  llm.py  mlflow_tracker.py  training.py
services/ml-service/src/stubs/: __init__.py  mock_agent.py  mock_context.py  mock_inference.py  mock_orchestrator.py  mock_storage.py
services/ml-service/src/utils/: directml_utils.py
services/ml-service/tests/: README.md  __init__.py  conftest.py  test_agent_intelligence.py  test_analytics.py  test_embeddings.py  test_integration.py  test_llm_service.py  test_security.py  test_training.py
services/ml-service/tests/integration/: __init__.py  conftest.py  test_health.py  test_integration.py  test_mlflow_artifacts.py  test_mlflow_experiments.py  test_mlflow_runs.py  test_optuna_studies.py
services/rust-core/: Cargo.toml
services/rust-core/benches/: api_benchmarks.rs  auth_benchmarks.rs  database_benchmarks.rs
services/rust-core/migrations/: 20240101000001_create_users.sql  20240101000002_create_agents.sql  20240101000003_create_containers.sql  20240101000004_create_training.sql  20240101000005_create_conversations.sql  20240101000006_create_audit_and_system.sql
services/rust-core/neo4j/: schema.cypher  seed.cypher
services/rust-core/src/: config.rs  main.rs
services/rust-core/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs  rbac.rs  session.rs
services/rust-core/src/db/: mod.rs  models.rs  neo4j.rs  postgres.rs  redis.rs
services/rust-core/src/graphql/: context.rs  dataloaders.rs  mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs  types.rs
services/rust-core/src/ws/: connection.rs  handlers.rs  manager.rs  messages.rs  mod.rs  router.rs
services/rust-core/tests/: api_tests.rs  auth_tests.rs  db_tests.rs
services/rust-core/tests/common/: factories.rs  fixtures.rs  helpers.rs  mocks.rs  mod.rs
services/rust-core/tests/integration/: api.rs  auth.rs  database.rs  mod.rs  websocket.rs
services/rust-core/tests/property/: api_properties.rs  auth_properties.rs  data_properties.rs  mod.rs
(+630 files in other folders)
