[package]
name = "neurectomy-core"
version = "0.1.0"
edition = "2021"
authors = ["NEURECTOMY Team"]
description = "Core backend service for NEURECTOMY - The Ultimate Agent Development Platform"
license = "Proprietary"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Web Framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7.0"

# Streaming
async-stream = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
neo4rs = "0.7"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Message Queue
async-nats = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
config = "0.14"
futures-util = "0.3"
tokio-stream = "0.1"

# Tracing & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
# Async testing
tokio-test = "0.4"

# Property-based testing
proptest = "1.4"
proptest-derive = "0.4"

# Test data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"

# HTTP mocking
wiremock = "0.5"
httpmock = "0.7"

# Mocking framework
mockall = "0.12"
mockall_double = "0.3"

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"
claim = "0.5"

# Test utilities
serial_test = "3.0"
rstest = "0.18"
test-case = "3.3"
once_cell = "1.19"

# Integration testing
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
axum-test = "14"

# Snapshot testing
insta = { version = "1.34", features = ["json", "yaml"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

# Test profile optimizations
[profile.test]
opt-level = 1

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[bench]]
name = "api_benchmarks"
harness = false

[[bench]]
name = "auth_benchmarks"
harness = false

[[bench]]
name = "database_benchmarks"
harness = false
